[gd_scene load_steps=3 format=2]

[ext_resource path="res://OpenSimplexNoise_Viewer.gd" type="Script" id=1]
[ext_resource path="res://OpenSimplexNoise_Viewer.tres" type="Material" id=2]

[node name="OpenSimplexNoise Viewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.42108
margin_top = -5.26315
margin_right = 8.42114
margin_bottom = -5.26318
script = ExtResource( 1 )

[node name="DocumentationButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 20.0
margin_right = -20.0
grow_horizontal = 0
text = "API Documentation"

[node name="SeamlessNoiseTexture" type="TextureRect" parent="."]
material = ExtResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -20.0
margin_right = 70.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParameterContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 40.0

[node name="SeedSpinBox" type="SpinBox" parent="ParameterContainer"]
margin_right = 280.0
margin_bottom = 24.0
min_value = -1.53049e+009
max_value = 1.53049e+009
rounded = true
allow_greater = true
allow_lesser = true
prefix = "Seed:"

[node name="LacunaritySpinBox" type="SpinBox" parent="ParameterContainer"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 52.0
max_value = 1e+008
step = 0.01
allow_greater = true
prefix = "Lacunarity:"

[node name="PeriodSpinBox" type="SpinBox" parent="ParameterContainer"]
margin_top = 56.0
margin_right = 280.0
margin_bottom = 80.0
min_value = -1e+008
max_value = 1e+008
step = 0.01
allow_greater = true
prefix = "Period:"

[node name="PersistenceSpinBox" type="SpinBox" parent="ParameterContainer"]
margin_top = 84.0
margin_right = 280.0
margin_bottom = 108.0
max_value = 1e+008
step = 0.01
allow_greater = true
prefix = "Persistance:"

[node name="OctavesSpinBox" type="SpinBox" parent="ParameterContainer"]
margin_top = 112.0
margin_right = 280.0
margin_bottom = 136.0
min_value = 1.0
max_value = 10.0
value = 1.0
allow_greater = true
prefix = "Octaves:"

[node name="ClipContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -72.0
margin_right = 300.0
margin_bottom = -20.0
grow_vertical = 0

[node name="MinClipSpinBox" type="SpinBox" parent="ClipContainer"]
margin_right = 280.0
margin_bottom = 24.0
min_value = -1.0
max_value = 1.0
step = 0.01
value = -1.0
prefix = "Min:"

[node name="MaxClipSpinBox" type="SpinBox" parent="ClipContainer"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 52.0
min_value = -1.0
max_value = 1.0
step = 0.01
value = 1.0
prefix = "Max:"
[connection signal="pressed" from="DocumentationButton" to="." method="_on_DocumentationButton_pressed"]
[connection signal="value_changed" from="ParameterContainer/SeedSpinBox" to="." method="_on_SeedSpinBox_value_changed"]
[connection signal="value_changed" from="ParameterContainer/LacunaritySpinBox" to="." method="_on_LacunaritySpinBox_value_changed"]
[connection signal="value_changed" from="ParameterContainer/PeriodSpinBox" to="." method="_on_PeriodSpinBox_value_changed"]
[connection signal="value_changed" from="ParameterContainer/PersistenceSpinBox" to="." method="_on_PersistenceSpinBox_value_changed"]
[connection signal="value_changed" from="ParameterContainer/OctavesSpinBox" to="." method="_on_OctavesSpinBox_value_changed"]
[connection signal="value_changed" from="ClipContainer/MinClipSpinBox" to="." method="_on_MinClipSpinBox_value_changed"]
[connection signal="value_changed" from="ClipContainer/MaxClipSpinBox" to="." method="_on_MaxClipSpinBox_value_changed"]
